atualizacao-previsao-do-tempo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
+    <link rel="icon" type="image/png" href="img/image.png">
     <link rel="stylesheet" href="styles.css" />
     <script src="doc.js" defer></script>
     <link
@@ -17,7 +18,7 @@
   <body>
     <div class="container">
       <div class="saudacao">
-        <h1>Bem vindo(a) ao <span>ClimaXpert</span></h1>
+        <h1>Bem vindo(a) ao <span class="titulo">ClimaXpert</span></h1>
         <h3>Saiba o clima de qualquer cidade com apenas um clique <i class="fa fa-mouse-pointer" aria-hidden="true"></i>
         </h3>
       </div>
@@ -29,10 +30,9 @@
             <div class="botao">
               <button class="btn">Clique!</button>
             </div>
-            <div class="resultado-clima  ">
-
+            <div class="resultado-clima hidden ">
                 <div id="weather-data" class="">
-                    <h2><i class="fa-solid fa-location-dot"></i><span id="city">Teste</span> <img id="country"></img></h2>
+                    <h2><i class="fa-solid fa-location-dot"></i><span id="city"></span> <img id="country"></img></h2>
                     <p id="temperature"><span></span></p>
                     <div id="description-container">
                       <p id="description"></p>
@@ -49,24 +49,12 @@
                       </p>
                     </div>
                   </div>
-                  <div id="error-message" class="">
-                    <p>Não foi possível encontrar o clima de uma cidade com este nome.</p>
-                  </div>
-                  <div id="loader" class="">
+                  <!-- <div id="loader" class="">
                     <i class="fa-solid fa-spinner"></i>
-                  </div>
-                  <div id="suggestions">
-                    <button id="viena">Viena</button>
-                    <button id="copenhague">Copenhague</button>
-                    <button id="zurique">Zurique</button>
-                    <button id="vancouver">Vancouver</button>
-                    <button id="genebra">Genebra</button>
-                    <button id="frankfurt">Frankfurt</button>
-                    <button id="osaka">Osaka</button>
-                    <button id="maceio">Maceió</button>
-                  </div>
-    
+                  </div> -->
               </div>
+
+                <p class="error hidden">Não foi possível encontrar o clima de uma cidade com este nome.</p>
           </div>
         </div>
       </div>
